[package]
name = "fips204"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 204 (draft): Module-Lattice-Based Digital Signature"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
repository = "https://github.com/integritychain/fips204"
rust-version = "1.70"



[features]
default = ["default-rng", "ml-dsa-44", "ml-dsa-65", "ml-dsa-87"]
default-rng = ["rand_core/getrandom"]
ml-dsa-44 = []
ml-dsa-65 = []
ml-dsa-87 = []


[dependencies]
sha3 = { version = "0.10.8", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }


[dev-dependencies]
rand = "0.8.5"
regex = "1.10.2"
hex = "0.4.3"
rand_chacha = "0.3.1"
criterion = "0.4.0" # 0.4.0 needed to keep MSRV back at 1.70, newer: "0.5.1"


[[bench]]
name = "benchmark"
harness = false


[profile.release]
debug = true


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false