[package]
name = "fips204"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 204 (draft): Module-Lattice-Based Digital Signature"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
documentation = "https://docs.rs/fips204"
categories = ["cryptography", "no-std"]
repository = "https://github.com/integritychain/fips204"
keywords = ["FIPS204", "lattice", "signature"]
# MSRV set at 1.70 for debian testing, e.g. https://packages.debian.org/search?keywords=rustc
# This requires several marginally outdated dependencies, see below
rust-version = "1.70"


[features]
default = ["default-rng", "ml-dsa-44", "ml-dsa-65", "ml-dsa-87"]
default-rng = ["rand_core/getrandom"]
ml-dsa-44 = []
ml-dsa-65 = []
ml-dsa-87 = []


[dependencies]
rand_core = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10.2", default-features = false }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }


[dev-dependencies]
rand = "0.8.5"
regex = "1.10.2"
hex = "0.4.3"
rand_chacha = "0.3.1"
criterion = "0.4.0" # 0.4.0 needed to keep MSRV back at 1.70, newer: "0.5.1"


[[bench]]
name = "benchmark"
harness = false


[profile.dev]
debug = true
#lto = true
#opt-level = 3
#codegen-units = 1


[profile.release]
lto = true
opt-level = "s"
codegen-units = 1


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1
