[package]
name = "ct_cm4-fips204"
version = "0.1.1"
license = "MIT OR Apache-2.0"
description = "Cortex-M4 testbench for FIPS 204 (draft) ML-DSA"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
publish = false
edition = "2021"


[dependencies]
fips204 = { path = "..", default-features = false, features = ["ml-dsa-44"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }
microbit-v2 = "0.13.0"
rtt-target = { version = "0.5.0"} #, features = ["cortex-m"] }
rand_core = { version = "0.6.4", default-features = false }
hex-literal = "0.4.1"


[profile.dev]
debug = true
debug-assertions = false
overflow-checks = false
lto = true
opt-level = 3
codegen-units = 1

# cargo update -p fixed@1.26.0 --precise 1.23.1