[package]
name = "fips204-ct_cm4"
version = "0.2.2"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
description = "Cortex-M4 testbench for FIPS 204 (draft) ML-DSA"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.70"


[dependencies]
fips204 = { path = "..", default-features = false, features = ["ml-dsa-44"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }
microbit-v2 = "0.13.0"
rtt-target = { version = "0.5.0"}
rand_core = { version = "0.6.4", default-features = false }
hex-literal = "0.4.1"


[profile.dev]
debug = true
debug-assertions = false
overflow-checks = false
lto = true
opt-level = 3
codegen-units = 1



# If cargo complains about 'fixed' on MSRV 1.70, use version 1.23.1
# cargo update -p fixed@1.27.0 --precise 1.23.1