[package]
name = "fips204-dudect"
version = "0.1.2"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70"


[dependencies]
fips204 = { path = "..", features = ["dudect"] }
dudect-bencher = "0.6"
rand_core = { version = "0.6.4", default-features = false }


[profile.bench]
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1


[profile.release]
debug = false #true
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
codegen-units = 1
