[package]
name = "fips204-fuzz"
version = "0.2.0"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70"


[package.metadata]
cargo-fuzz = true


[dependencies]
libfuzzer-sys = "0.4"


[dependencies.fips204]
path = ".."


# Prevent this from interfering with workspaces
[workspace]
members = ["."]


[profile.release]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true


[[bin]]
name = "fuzz_all"
path = "fuzz_targets/fuzz_all.rs"
test = false
doc = false
